--- a/gui/package.json
+++ b/gui/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@electron/remote": "^2.0.1",
     "crypto": "^1.0.1",
+    "echarts": "^5.2.2",
     "electron-prompt": "^1.7.0",
     "ffi-napi": "^4.0.3",
     "mysql": "^2.18.1"
