add kernel code

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,10 +1,8 @@
-CONFIG_MODULE_SIG=n
-CONFIG_MODULE_SIG_ALL=n
-obj-m += fileVault.o
-fileVault-objs := overload.o
+obj-m := VaultModule.o
+VaultModule-objs := check.o netlinkp.o overload.o
 KDIR := /lib/modules/$(shell uname -r)/build
 PWD := $(shell pwd)
 default:
-	$(MAKE) -C $(KDIR) M=$(PWD) modules
+	$(MAKE) -C $(KDIR) SUBDIRS=$(PWD) modules
 clean:
-	$(RM) -rf .*.cmd *.mod *.mod.c *.o *.ko .tmp* *.order *.symvers *.ur-safe *.dwo
+	$(RM) -rf .*.cmd *.mod.c *.o *.ko .tmp* modules.order Module.symvers overload.o.ur-safe
